--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "@storybook/react": "^5.0.10",
     "@testing-library/jest-dom": "^4.0.0",
     "@testing-library/react": "^8.0.7",
-    "node-sass": "^4.13.1"
+    "@testing-library/react-hooks": "^3.2.1",
+    "node-sass": "^4.13.1",
+    "react-test-renderer": "^16.13.1"
   },
   "jest": {
     "watchPathIgnorePatterns": [
